# firebomb

./: .gitignore  LICENSE  README.md  pyproject.toml
src/firebomb/: __init__.py  auth_tester.py  cache.py  cli.py  client.py  discovery.py  enumeration.py  firestore_tester.py  functions_tester.py  models.py  output_formatting.py  report_generator.py  rtdb_tester.py  storage_tester.py  testing.py  utils.py
tests/: __init__.py  test_discovery.py  test_models.py  test_utils.py
